# protorev

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
fixtures/public/: README.md  test1_varint_150.pb.hex  test2_string_testing.pb.hex  test3_submessage_150.pb.hex  test4_mixed_order_equivalent.pb.hex  test4_packed_repeated.pb.hex
src/: classify.rs  dump.rs  error.rs  infer.rs  lib.rs  main.rs  manifest.rs  wire.rs
tests/: cli.rs  corpus.rs  decoder_fuzz.rs  golden_outputs.rs  json_outputs.rs  manifest.rs  public_fixtures.rs  readme_examples.rs  wire.rs
tests/golden/: diff.json  diff.txt  dump.json  dump.txt  experiments.json  schema.txt
