[package]
name = "protorev"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A protobuf reverse-engineering workbench"

[dependencies]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
missing_errors_doc = "allow"
must_use_candidate = "allow"
