[package]
name = "protorev"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A protobuf reverse-engineering workbench"
repository = "https://github.com/patrickomatic/protorev"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
missing_errors_doc = "allow"
must_use_candidate = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
serde_json = "1.0.150"
